# AI-Customer-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
config/: settings.py
dashboard/: app.py
data/: customer.db
data/feature_store/churn_training/latest/: features.parquet  metadata.json
data/feature_store/usage_anomaly/latest/: features.parquet  metadata.json
data/raw/: churn_labels.parquet  customers.parquet  sessions.parquet  support_tickets.parquet  transactions.parquet
mlruns/0/: meta.yaml
mlruns/645263210582554289/: meta.yaml
mlruns/645263210582554289/5cf0beb529be48fa85ff4ba031af4925/: meta.yaml
mlruns/645263210582554289/5cf0beb529be48fa85ff4ba031af4925/metrics/: auc  f1  precision  recall
mlruns/645263210582554289/629109d628f14753b8d216dfa51a67f6/: meta.yaml
mlruns/645263210582554289/629109d628f14753b8d216dfa51a67f6/tags/: mlflow.runName  mlflow.source.name
mlruns/645263210582554289/bbc424b52cad4f4fac6676b708989263/: meta.yaml
models/churn/: model.joblib
src/: __init__.py
src/data/: __init__.py  etl_pipeline.py  generate_data.py
src/features/: __init__.py  build_features.py  feature_store.py
src/models/: __init__.py  anomaly_model.py  churn_model.py  explainability.py  llm_insight.py
src/monitoring/: __init__.py  drift.py
src/training/: __init__.py  run_bias_tests.py  train_anomaly.py  train_churn.py
tests/: test_api.py
(+16 files in other folders)
